--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,6 @@ jobs:
           git restore yarn.lock
           # commit and push
           if [ -n "$(git status --porcelain --untracked-files=no)" ]; then
-            git commit -m "🪄 ci"
+            git commit -m "ci: Update ABIs"
             git push
           fi
