--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "scripts": {
     "test": "npx hardhat test --network hardhat",
+    "test:staker": "npx hardhat test --network hardhat test/DragonswapStaker.test.js",
+    "test:stakerBoosted": "npx hardhat test --network hardhat test/DragonswapStakerBoosted.test.js",
     "coverage": "npx hardhat coverage --network hardhat --testfiles test/",
     "format": "prettier --write 'contracts/**/*.sol' './**/*.js'",
     "lint": "solhint 'contracts/**/*.sol'",
