--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,8 @@ jobs:
         run: yarn install
       - name: Lint
         run: yarn lint
+      - name: Run tests factory
+        run: yarn test:factory
       - name: Run tests staker
         run: yarn test:staker
       - name: Run tests stakerBoosted
