--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "test": "npx hardhat test --network hardhat",
+    "test:factory": "npx hardhat test --network hardhat test/DragonswapStakerFactory.test.js",
     "test:staker": "npx hardhat test --network hardhat test/DragonswapStaker.test.js",
     "test:stakerBoosted": "npx hardhat test --network hardhat test/DragonswapStakerBoosted.test.js",
     "coverage": "npx hardhat coverage --network hardhat --testfiles test/",
