--- a/deployments/config.json
+++ b/deployments/config.json
@@ -1,4 +1,12 @@
 {
   "mainnet": {},
-  "testnet": {}
+  "testnet": {
+    "USDT": "0xf983afa393199d6902a1dd04f8e93465915ffd8b",
+    "USDC": "0xace5f7Ea93439Af39b46d2748fA1aC19951c8d7C",
+    "GLO": "0xcE15c17281e6B64b571c06Cbb83c68C3b97da275",
+    "PYTH": "0x3Fd40CFe4B8A1d748cad33db408b49579c6B4Ca5",
+    "DAI": "0x6Ffd84537040569Bb8160d1E06d0A5d4CEfdf638",
+    "DSWAP": "0x7b75109369ACb528d9fa989E227812a6589712b9",
+    "XAVA": "0xeBdE45A4DB821c0174936E53f77e6B8805e9E2eb"
+  }
 }
