:memo: chore: Added simulation scripts

--- a/deployments/farmConfig.json
+++ b/deployments/farmConfig.json
@@ -1,18 +1,18 @@
 {
     "classicFarmSettings":{
-      "stakeTokenName": "GLO",
-      "rewardTokenName": "USDT",
-      "rewardTokenAmount": "148480",
-      "rewardPerSecond": "245502",
+      "stakeTokenName": "SEI-SEIYAN",
+      "rewardTokenName": "WSEI",
+      "rewardTokenAmount": "141643",
+      "rewardPerSecond": "52883437873357228",
       "startTimestamp": "1722531600"
     },
     "boostedFarmSettings":{
-      "stakeTokenName": "USDT",
-      "rewardTokenName": "DSWAP",
-      "boosterTokenName": "GLO",
+      "stakeTokenName": "SEI-FXS",
+      "rewardTokenName": "WSEI",
+      "boosterTokenName": "FXS",
       "rewardTokenAmount": "9400",
       "boosterTokenAmount": "1461",
-      "rewardPerSecond": "15542328042328042",
+      "rewardPerSecond": "1783545840922890",
       "startTimestamp": "1722531600"
     }
 }  
