--- a/deployments/tokenConfig.json
+++ b/deployments/tokenConfig.json
@@ -18,5 +18,11 @@
     "DAI": "0x6Ffd84537040569Bb8160d1E06d0A5d4CEfdf638",
     "DSWAP": "0x7b75109369ACb528d9fa989E227812a6589712b9",
     "XAVA": "0xeBdE45A4DB821c0174936E53f77e6B8805e9E2eb"
+  },
+  "local": {
+    "SEI-SEIYAN": "0x8ba502d9243fa5e44678044098be9782cebafda5",
+    "SEI-FXS": "0x72ea36514b039bd8fc5bda43ee715a0758725070",
+    "WSEI": "0xe30fedd158a2e3b13e9badaeabafc5516e95e8c7",
+    "FXS": "0x64445f0aecC51E94aD52d8AC56b7190e764E561a"
   }
 }
