--- a/deployments/tokenConfig.json
+++ b/deployments/tokenConfig.json
@@ -4,6 +4,8 @@
     "SEI-SEIYAN": "0x8ba502d9243fa5e44678044098be9782cebafda5",
     "SEI-POPO": "0xa2aee4f82023c6614f3ab40041c3b434ff97b439",
     "SEIYAN-ISEI": "0x1164cb64477dc06d533c4d8905d76adeb5adbb94",
+    "SEI-MILLI": "0xF1d35dF54a1247b047A52F8acc2359b415Ba8A9a",
+    "SEI-FROY": "0xd4D953915C4765Ea3EC703ce840964A687563899",
     "FXS": "0x64445f0aecC51E94aD52d8AC56b7190e764E561a",
     "SEIYAN": "0x5f0e07dfee5832faa00c63f2d33a0d79150e8598",
     "ISEI": "0x5Cf6826140C1C56Ff49C808A1A75407Cd1DF9423",
