--- a/deployments/tokenConfig.json
+++ b/deployments/tokenConfig.json
@@ -6,6 +6,12 @@
     "SEIYAN-ISEI": "0x1164cb64477dc06d533c4d8905d76adeb5adbb94",
     "SEI-MILLI": "0xF1d35dF54a1247b047A52F8acc2359b415Ba8A9a",
     "SEI-FROY": "0xd4D953915C4765Ea3EC703ce840964A687563899",
+    "SEI-SEIYUN": "0xb1C6Cf64929E020F64072BE891bbFe0f98eaebd3",
+    "SEI-BALLZ": "0x2132124986C25525B1C55F9684f1af5f69eA13C0",
+    "SEI-JAYJEO": "0x768E57008AB115384f7945a6231c65F09889911e",
+    "SEI-CHUCK": "0x2C38f293F70Bc338f6D413b2eEE17AA498607d3E",
+    "SEI-SEI(The wale)": "0x7990251ed0166BF90dC82e865B5aFE382e228Ff4",
+    "SEI-REX": "0x69a8B6840cC39091942132FaF6991aEA806463F2",
     "FXS": "0x64445f0aecC51E94aD52d8AC56b7190e764E561a",
     "SEIYAN": "0x5f0e07dfee5832faa00c63f2d33a0d79150e8598",
     "ISEI": "0x5Cf6826140C1C56Ff49C808A1A75407Cd1DF9423",
