:memo: chore: Removed The Wale from token config

--- a/deployments/tokenConfig.json
+++ b/deployments/tokenConfig.json
@@ -10,7 +10,7 @@
     "SEI-BALLZ": "0x2132124986C25525B1C55F9684f1af5f69eA13C0",
     "SEI-JAYJEO": "0x768E57008AB115384f7945a6231c65F09889911e",
     "SEI-CHUCK": "0x2C38f293F70Bc338f6D413b2eEE17AA498607d3E",
-    "SEI-SEI(The wale)": "0x7990251ed0166BF90dC82e865B5aFE382e228Ff4",
+    "SEI-SEI": "0x7990251ed0166BF90dC82e865B5aFE382e228Ff4",
     "SEI-REX": "0x69a8B6840cC39091942132FaF6991aEA806463F2",
     "FXS": "0x64445f0aecC51E94aD52d8AC56b7190e764E561a",
     "SEIYAN": "0x5f0e07dfee5832faa00c63f2d33a0d79150e8598",
