:memo: chore: Renamed Trump token symbole

--- a/deployments/tokenConfig.json
+++ b/deployments/tokenConfig.json
@@ -16,7 +16,7 @@
     "SEI-USA": "0xa90544CFA9F98c9bf308dF0dB7194d39D33Bc792",
     "SEI-SEIS": "0x5613DBe210b9DC9bd06DCA69854455ed9E811E4E",
     "SEI-PEPEI": "0xbC1875FA1bB5497E1C9d312B7C88aA21186a9391",
-    "SEI-TRUMP": "0x14cCf275a40C895e89459bdF35a470ccd8905eC7",
+    "SEI-TPUMP": "0x14cCf275a40C895e89459bdF35a470ccd8905eC7",
     "FXS": "0x64445f0aecC51E94aD52d8AC56b7190e764E561a",
     "SEIYAN": "0x5f0e07dfee5832faa00c63f2d33a0d79150e8598",
     "ISEI": "0x5Cf6826140C1C56Ff49C808A1A75407Cd1DF9423",
