--- a/deployments/tokenConfig.json
+++ b/deployments/tokenConfig.json
@@ -12,6 +12,11 @@
     "SEI-CHUCK": "0x2C38f293F70Bc338f6D413b2eEE17AA498607d3E",
     "SEI-SEI": "0x7990251ed0166BF90dC82e865B5aFE382e228Ff4",
     "SEI-REX": "0x69a8B6840cC39091942132FaF6991aEA806463F2",
+    "SEI-GONAD": "0xBE3B8eB9AE801395040b013B73Aa539f46A9c6a8",
+    "SEI-USA": "0xa90544CFA9F98c9bf308dF0dB7194d39D33Bc792",
+    "SEI-SEIS": "0x5613DBe210b9DC9bd06DCA69854455ed9E811E4E",
+    "SEI-PEPEI": "0xbC1875FA1bB5497E1C9d312B7C88aA21186a9391",
+    "SEI-TPUMP": "0x14cCf275a40C895e89459bdF35a470ccd8905eC7",
     "FXS": "0x64445f0aecC51E94aD52d8AC56b7190e764E561a",
     "SEIYAN": "0x5f0e07dfee5832faa00c63f2d33a0d79150e8598",
     "ISEI": "0x5Cf6826140C1C56Ff49C808A1A75407Cd1DF9423",
