--- a/deployments/tokenConfig.json
+++ b/deployments/tokenConfig.json
@@ -19,6 +19,7 @@
     "SEI-TPUMP": "0x14cCf275a40C895e89459bdF35a470ccd8905eC7",
     "SEI-USDT": "0x8D5261cFF8d63E71C772574EbA63E64E6726EE06",
     "SEI-USDC": "0xC75C669a62A7eCe0C8d37904b747970467432ad3",
+    "iSEI-USDC": "0x753D3775612e59C0938250A94Bcd79de9cfED362",
     "FXS": "0x64445f0aecC51E94aD52d8AC56b7190e764E561a",
     "SEIYAN": "0x5f0e07dfee5832faa00c63f2d33a0d79150e8598",
     "ISEI": "0x5Cf6826140C1C56Ff49C808A1A75407Cd1DF9423",
