--- a/deployments/tokenConfig.json
+++ b/deployments/tokenConfig.json
@@ -24,7 +24,8 @@
     "SEIYAN": "0x5f0e07dfee5832faa00c63f2d33a0d79150e8598",
     "ISEI": "0x5Cf6826140C1C56Ff49C808A1A75407Cd1DF9423",
     "POPO": "0xc18b6a15fb0ceaf5eb18696eefcb5bc7b9107149",
-    "WSEI": "0xe30fedd158a2e3b13e9badaeabafc5516e95e8c7"
+    "WSEI": "0xe30fedd158a2e3b13e9badaeabafc5516e95e8c7",
+    "PEPEI": "0x9C367a272f8E318D10118C6367fD69DEf30e430E"
   },
   "testnet": {
     "USDT": "0xf983afa393199d6902a1dd04f8e93465915ffd8b",
