--- a/deployments/farmConfig.json
+++ b/deployments/farmConfig.json
@@ -6,13 +6,13 @@
       "rewardPerSecond": "89100115740740740",
       "startTimestamp": "1726653600"
     },
-    "boostedFarmConfig1":{
+    "boostedFarmConfig":{
       "stakeTokenName": "SEI-PEPEI",
       "rewardTokenName": "PEPEI",
       "boosterTokenName": "WSEI",
       "rewardTokenAmount": "75000000",
       "boosterTokenAmount": "3000",
       "rewardPerSecond": "62003968253968253968",
-      "startTimestamp": "1731034800"
+      "startTimestamp": "1730998800"
     }
 }  
