--- a/deployments/tokenConfig.json
+++ b/deployments/tokenConfig.json
@@ -20,12 +20,14 @@
     "SEI-USDT": "0x8D5261cFF8d63E71C772574EbA63E64E6726EE06",
     "SEI-USDC": "0xC75C669a62A7eCe0C8d37904b747970467432ad3",
     "iSEI-USDC": "0x753D3775612e59C0938250A94Bcd79de9cfED362",
+    "SEI-SHENRN": "0xebc0E7647777b875F9Db0e695B28C55808473F49",
     "FXS": "0x64445f0aecC51E94aD52d8AC56b7190e764E561a",
     "SEIYAN": "0x5f0e07dfee5832faa00c63f2d33a0d79150e8598",
     "ISEI": "0x5Cf6826140C1C56Ff49C808A1A75407Cd1DF9423",
     "POPO": "0xc18b6a15fb0ceaf5eb18696eefcb5bc7b9107149",
     "WSEI": "0xe30fedd158a2e3b13e9badaeabafc5516e95e8c7",
-    "PEPEI": "0x9C367a272f8E318D10118C6367fD69DEf30e430E"
+    "PEPEI": "0x9C367a272f8E318D10118C6367fD69DEf30e430E",
+    "SHENRN": "0x0DD9e6A6AEb91f1e3596F69d5443b6ca2e864896"
   },
   "testnet": {
     "USDT": "0xf983afa393199d6902a1dd04f8e93465915ffd8b",
