:memo: chore: New config

--- a/deployments/tokenConfig.json
+++ b/deployments/tokenConfig.json
@@ -22,6 +22,7 @@
     "iSEI-USDC": "0x753D3775612e59C0938250A94Bcd79de9cfED362",
     "SEI-SHENRN": "0xebc0E7647777b875F9Db0e695B28C55808473F49",
     "SEI-SPEX": "0xc0112967d4b3940e20508404040bbCe8f7aDf22b",
+    "SEI-DRG": "0x481b7a494e565be3666ac34cca2fa9304611ef0a",
     "FXS": "0x64445f0aecC51E94aD52d8AC56b7190e764E561a",
     "SEIYAN": "0x5f0e07dfee5832faa00c63f2d33a0d79150e8598",
     "ISEI": "0x5Cf6826140C1C56Ff49C808A1A75407Cd1DF9423",
