--- a/deployments/farmConfig.json
+++ b/deployments/farmConfig.json
@@ -6,7 +6,7 @@
       "rewardPerSecond": "6430040",
       "startTimestamp": "1731945600"
     },
-    "boostedFarmConfig":{
+    "boostedFarmConfig2":{
       "stakeTokenName": "SEI-SHENRN",
       "rewardTokenName": "SHENRN",
       "boosterTokenName": "WSEI",
@@ -23,5 +23,14 @@
       "boosterTokenAmount": "1000",
       "rewardPerSecond": "85601780",
       "startTimestamp": "1733094000"
+    },
+    "boostedFarmConfig":{
+      "stakeTokenName": "SEI-DRG",
+      "rewardTokenName": "USDC",
+      "boosterTokenName": "DRG",
+      "rewardTokenAmount": "15000",
+      "boosterTokenAmount": "170000",
+      "rewardPerSecond": "11574",
+      "startTimestamp": "1752001200"
     }
-}  
+}
