:memo: chore: New config pt2

--- a/deployments/tokenConfig.json
+++ b/deployments/tokenConfig.json
@@ -30,7 +30,9 @@
     "WSEI": "0xe30fedd158a2e3b13e9badaeabafc5516e95e8c7",
     "PEPEI": "0x9C367a272f8E318D10118C6367fD69DEf30e430E",
     "SHENRN": "0x0DD9e6A6AEb91f1e3596F69d5443b6ca2e864896",
-    "SPEX": "0x3A0A7a3cA25C17D15E8d51332fb25BFEA274d107"
+    "SPEX": "0x3A0A7a3cA25C17D15E8d51332fb25BFEA274d107",
+    "USDC": "0x3894085ef7ff0f0aedf52e2a2704928d1ec074f1",
+    "DRG": "0x0a526e425809aea71eb279d24ae22dee6c92a4fe"
   },
   "testnet": {
     "USDT": "0xf983afa393199d6902a1dd04f8e93465915ffd8b",
