--- a/deployments/tokenConfig.json
+++ b/deployments/tokenConfig.json
@@ -32,7 +32,8 @@
     "SHENRN": "0x0DD9e6A6AEb91f1e3596F69d5443b6ca2e864896",
     "SPEX": "0x3A0A7a3cA25C17D15E8d51332fb25BFEA274d107",
     "USDC": "0x3894085ef7ff0f0aedf52e2a2704928d1ec074f1",
-    "DRG": "0x0a526e425809aea71eb279d24ae22dee6c92a4fe"
+    "DRG": "0x0a526e425809aea71eb279d24ae22dee6c92a4fe",
+    "MILLI": "0x95597eb8d227a7c4b4f5e807a815c5178ee6dbe1"
   },
   "testnet": {
     "USDT": "0xf983afa393199d6902a1dd04f8e93465915ffd8b",
