--- a/deployments/tokenConfig.json
+++ b/deployments/tokenConfig.json
@@ -23,6 +23,7 @@
     "SEI-SHENRN": "0xebc0E7647777b875F9Db0e695B28C55808473F49",
     "SEI-SPEX": "0xc0112967d4b3940e20508404040bbCe8f7aDf22b",
     "SEI-DRG": "0x481b7a494e565be3666ac34cca2fa9304611ef0a",
+    "SEI-CHIPS": "0x6f695e89f17ab7476ea9cdd4da2b24f55a853a57",
     "USDC-APO": "0x6D5B3417007e07697b5E548A56965750Da8d092C",
     "FXS": "0x64445f0aecC51E94aD52d8AC56b7190e764E561a",
     "SEIYAN": "0x5f0e07dfee5832faa00c63f2d33a0d79150e8598",
@@ -35,7 +36,8 @@
     "USDC": "0x3894085ef7ff0f0aedf52e2a2704928d1ec074f1",
     "DRG": "0x0a526e425809aea71eb279d24ae22dee6c92a4fe",
     "MILLI": "0x95597eb8d227a7c4b4f5e807a815c5178ee6dbe1",
-    "APO": "0x5b8203e65aA5Be3F1CF53FD7fa21b91BA4038ECC"
+    "APO": "0x5b8203e65aA5Be3F1CF53FD7fa21b91BA4038ECC",
+    "CHIPS": "0xBd82f3bfE1dF0c84faEC88a22EbC34C9A86595dc"
   },
   "testnet": {
     "USDT": "0xf983afa393199d6902a1dd04f8e93465915ffd8b",
