--- a/deployments/tokenConfig.json
+++ b/deployments/tokenConfig.json
@@ -34,7 +34,8 @@
     "PEPEI": "0x9C367a272f8E318D10118C6367fD69DEf30e430E",
     "SHENRN": "0x0DD9e6A6AEb91f1e3596F69d5443b6ca2e864896",
     "SPEX": "0x3A0A7a3cA25C17D15E8d51332fb25BFEA274d107",
-    "USDC": "0x3894085ef7ff0f0aedf52e2a2704928d1ec074f1",
+    "USDCn": "0x3894085ef7ff0f0aedf52e2a2704928d1ec074f1",
+    "USDC": "0xe15fc38f6d8c56af07bbcbe3baf5708a2bf42392",
     "DRG": "0x0a526e425809aea71eb279d24ae22dee6c92a4fe",
     "MILLI": "0x95597eb8d227a7c4b4f5e807a815c5178ee6dbe1",
     "APO": "0x5b8203e65aA5Be3F1CF53FD7fa21b91BA4038ECC",
