:memo: chore: Config update

--- a/deployments/tokenConfig.json
+++ b/deployments/tokenConfig.json
@@ -25,6 +25,7 @@
     "SEI-DRG": "0x481b7a494e565be3666ac34cca2fa9304611ef0a",
     "SEI-CHIPS": "0x6f695e89f17ab7476ea9cdd4da2b24f55a853a57",
     "SEI-SBC": "0x767ae7a816915b870a3fb317d385cf5480d191d8",
+    "SEI-GGC": "0x11d61e3b07c74de0c5dc8bef3151910f3c42f624",
     "USDC-APO": "0x6D5B3417007e07697b5E548A56965750Da8d092C",
     "FXS": "0x64445f0aecC51E94aD52d8AC56b7190e764E561a",
     "SEIYAN": "0x5f0e07dfee5832faa00c63f2d33a0d79150e8598",
@@ -40,7 +41,8 @@
     "MILLI": "0x95597eb8d227a7c4b4f5e807a815c5178ee6dbe1",
     "APO": "0x5b8203e65aA5Be3F1CF53FD7fa21b91BA4038ECC",
     "CHIPS": "0xBd82f3bfE1dF0c84faEC88a22EbC34C9A86595dc",
-    "SBC": "0x3ea30c06f4ba6f696d3ba4b660c39da96ed8f686"
+    "SBC": "0x3ea30c06f4ba6f696d3ba4b660c39da96ed8f686",
+    "GGC": "0x58E11d8ED38a2061361e90916540c5c32281A380"
   },
   "testnet": {
     "USDT": "0xf983afa393199d6902a1dd04f8e93465915ffd8b",
