--- a/deployments/farmConfig.json
+++ b/deployments/farmConfig.json
@@ -69,7 +69,7 @@
       "rewardPerSecond": "3086496913580246913",
       "startTimestamp": "1753192800"
     },
-    "boostedFarmConfig":{
+    "boostedFarmConfig8":{
       "stakeTokenName": "SEI-DRG",
       "rewardTokenName": "USDC",
       "boosterTokenName": "DRG",
@@ -77,5 +77,14 @@
       "boosterTokenAmount": "218181",
       "rewardPerSecond": "4629",
       "startTimestamp": "1753351200"
+    },
+    "boostedFarmConfig":{
+      "stakeTokenName": "SEI-GGC",
+      "rewardTokenName": "GGC",
+      "boosterTokenName": "DRG",
+      "rewardTokenAmount": "371000",
+      "boosterTokenAmount": "8000",
+      "rewardPerSecond": "143132716049382716",
+      "startTimestamp": "1753794000"
     }
 }
