--- a/deployments/farmConfig.json
+++ b/deployments/farmConfig.json
@@ -78,16 +78,16 @@
       "rewardPerSecond": "4629",
       "startTimestamp": "1753351200"
     },
-    "boostedFarmConfig9":{
+    "boostedFarmConfig":{
       "stakeTokenName": "SEI-GGC",
       "rewardTokenName": "GGC",
       "boosterTokenName": "DRG",
-      "rewardTokenAmount": "371000",
+      "rewardTokenAmount": "360000",
       "boosterTokenAmount": "8000",
-      "rewardPerSecond": "143132716049382716",
+      "rewardPerSecond": "138888888888888888",
       "startTimestamp": "1753794000"
     },
-    "boostedFarmConfig":{
+    "boostedFarmConfigNext":{
       "stakeTokenName": "SEI-WILSON",
       "rewardTokenName": "WILSON",
       "boosterTokenName": "DRG",
